Test tuning.